--- a/docs/main.css
+++ b/docs/main.css
@@ -52,3 +52,9 @@ div.extra {
     div.extra ol {
         font-size: 80%;
     }
+
+.petia {
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+}
